SERVER-76550 Shards undergoing draining must chop big chunks to move them off